# gif.zone

./: .gitignore  docker-compose.yml  makefile  readme.md  sqitch.conf
backend/: Cargo.toml  dockerfile
backend/config/: settings.docker.yml  settings.yml
backend/src/: config.rs  logging.rs  main.rs  middleware.rs  tests.rs
backend/src/api/: gif.rs  mod.rs  tag.rs  util.rs
backend/src/database/: gif.rs  mod.rs  tag.rs  util.rs
backend/src/domain/: gif.rs  mod.rs  tag.rs
backend/src/models/: error.rs  gif.rs  mod.rs  search.rs  tag.rs
dev_config/: gen_tls_keys.sh  test_keys.conf
frontend/: .eslintrc.js  dockerfile  package-lock.json  package.json
frontend/config/: nginx.conf
frontend/public/: index.html  manifest.json
frontend/src/: App.js  GifCard.js  Search.js  SiteFooter.js  index.css  index.js
frontend/src/components/: GifCard.js  Menu.js
frontend/src/pages/: About.js  Search.js  Todo.js
sql/: sqitch.plan
sql/deploy/: initial.sql  test-data.sql
sql/revert/: initial.sql  test-data.sql
sql/verify/: initial.sql  test-data.sql
