[package]
name = "backend"
version = "0.1.0"
authors = ["Brahm Lower <bplower@gmail.com>"]

[dependencies]
postgres = { version = "0.15", features = ["with-chrono"] }
postgres-derive = "0.3.3"
iron = "0.6.*"
router = "*"
log = { version = "0.4.3", features = ["serde"] }
fern = "*"
bodyparser = "0.8.0"
jsonwebtoken = "4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.9.0"
r2d2 = "*"
r2d2_postgres = "*"
time = "0.1"
